--- a/src/style/index.css
+++ b/src/style/index.css
@@ -36,3 +36,13 @@ body {
     background-color: white;
     color: black;
 }
+
+.ActiveButton {
+    color: greenyellow;
+    border-color: greenyellow;
+}
+
+.ActiveButton:hover {
+    color: black;
+    background-color: greenyellow;
+}
